test/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2012-09-26 15:47:34.541909

